--- a/KlipperLCD.service
+++ b/KlipperLCD.service
@@ -7,8 +7,10 @@
  User=pi
  Restart=always
  RestartSec=1
- ExecStart=/bin/sh -c '/usr/bin/env python3 /home/pi/KlipperLCD/main.py  > /tmp/KlipperLCD.log 2>&1'
+ WorkingDirectory=/home/pi/KlipperLCD
+ ExecStart=/usr/bin/python3 /home/pi/KlipperLCD/main.py
 
 [Install]
  WantedBy=multi-user.target
+
 
