--- a/KlipperLCD.service
+++ b/KlipperLCD.service
@@ -4,10 +4,11 @@
 
 [Service]
  Type=simple
- User=pi
+ User=root
  Restart=always
  RestartSec=1
  ExecStart=/bin/sh -c '/usr/bin/env python3 /home/pi/KlipperLCD/main.py  > /tmp/KlipperLCD.log 2>&1'
 
 [Install]
  WantedBy=multi-user.target
+
