--- a/KlipperLCD.service
+++ b/KlipperLCD.service
@@ -8,7 +8,9 @@
  Restart=always
  RestartSec=1
  ExecStart=/bin/sh -c '/usr/bin/env python3 /home/pi/KlipperLCD/main.py  > /tmp/KlipperLCD.log 2>&1'
+ KillMode=process
 
 [Install]
  WantedBy=multi-user.target
+
 
