--- a/KlipperLCD_firmw.service
+++ b/KlipperLCD_firmw.service
@@ -1,12 +1,13 @@
 [Unit]
-Description=KlipperLCD Firmware Updater
-After=multi-user.target
+Description=Firmware update for KlipperLCD
+After=network.target
 
 [Service]
-Type=oneshot
+Type=simple
 User=root
-ExecStart=/usr/bin/env python3 /home/pi/KlipperLCD/firmw.py
-RemainAfterExit=yes
+ExecStart=/usr/bin/python3 /home/pi/KlipperLCD/firmw_update.py
+Restart=no
+TimeoutStartSec=0
 
 [Install]
 WantedBy=multi-user.target
