--- a/firmw.service
+++ b/firmw.service
@@ -3,11 +3,10 @@ Description=Firmware update for KlipperLCD
 After=network.target
 
 [Service]
-Type=simple
+Type=oneshot
 User=root
-ExecStart=/usr/bin/python3 /home/pi/KlipperLCD/firmw_update.py
-Restart=no
-TimeoutStartSec=0
+ExecStart=/usr/bin/python3 /home/pi/KlipperLCD/firmw.py
+RemainAfterExit=no
 
 [Install]
 WantedBy=multi-user.target
