--- a/KlipperLCD.service
+++ b/KlipperLCD.service
@@ -1,18 +1,14 @@
 [Unit]
- Description=KlipperLCD Service
- After=moonraker.service
+Description=KlipperLCD Service
+After=moonraker.service
 
 [Service]
- Type=simple
- User=root
- Restart=always
- RestartSec=1
- ExecStart=/bin/sh -c '/usr/bin/env python3 /home/pi/KlipperLCD/main.py  > /tmp/KlipperLCD.log 2>&1'
+Type=simple
+User=root
+WorkingDirectory=/home/pi/KlipperLCD
+Restart=always
+RestartSec=1
+ExecStart=/usr/bin/env python3 /home/pi/KlipperLCD/main.py > /tmp/KlipperLCD.log 2>&1
 
 [Install]
- WantedBy=multi-user.target
-
-
-
-
-
+WantedBy=multi-user.target
